# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: calculator.py  divisor.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
games/: cli.py  engine.py
games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
