[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Andrey M. <tolkoigri@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "games.scripts.brain_games:main"
brain-even = "games.scripts.brain_even:main"
brain-calc = "games.scripts.brain_calc:main"
brain-gcd = "games.scripts.brain_gcd:main"
brain-progression = "games.scripts.brain_progression:main"
brain-prime = "games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
